--- a/src/components/ProductDetails/index.css
+++ b/src/components/ProductDetails/index.css
@@ -1,4 +1,4 @@
-.book-details-image{
+.product-details-image{
     height: 35vh;
     width: 35vw;
 
@@ -8,7 +8,7 @@
     height: 100vh;
     padding-top: 3%;
 }
-.book-details-container{
+.product-details-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,4 +53,24 @@
     font-size: 22px;
     font-weight: bold;
     
+}
+@media screen and (max-width: 600px){
+    .btn{
+        width: 40vw;
+    }
+    .product-details-image{
+        width: 50vw;
+    }
+    .spaning-1{
+        font-size: 20px;
+    }
+    .spaning{
+        font-size: 19px;
+    }
+    .about-paragraph{
+        font-size: 17px;
+    }
+    .para{
+        font-size: 18px;
+    }
 }
