--- a/src/components/Products/index.css
+++ b/src/components/Products/index.css
@@ -8,7 +8,17 @@
 
 .bg-prodct{
     
-    padding-top: 2%;
+    padding-top: 1%;
+    text-align: center;
     
 
+}
+.head{
+    margin-bottom: 2%;
+}
+
+@media screen and (max-width: 600px){
+    .bg-prodct{
+        background-color: whitesmoke;
+    }
 }
